# cmake-preset-starter

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/src/: main.cpp
cmake/: EnableCcache.cmake
